[package]
name = "tinyapplause"
version = "0.1.0"
description = "for experimenting with CLAP and other aspects of CLI-app generation"
edition = "2021"
readme = "README.md"
homepage = ""
license = ""
repository = "https://github.com/ethanmsl/tinyapplause"
categories = ["exploratory", "cli"]
keywords = ["cli", "clap", "rust"]
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
